--- a/GameLauncherAdmin/Views/EmulateurImporterPage.xaml
+++ b/GameLauncherAdmin/Views/EmulateurImporterPage.xaml
@@ -4,9 +4,168 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:winuicontrols="using:CommunityToolkit.WinUI.Controls"
+    xmlns:ui="using:CommunityToolkit.WinUI"
     mc:Ignorable="d">
 
-    <Grid x:Name="ContentArea">
-        
+    <Grid x:Name="ContentArea" HorizontalAlignment="Stretch">
+        <!--<ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible">-->
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">
+                <Expander HorizontalContentAlignment="Stretch" HorizontalAlignment="Stretch" Header="Choisir son émulateur"                      
+                      IsExpanded="{x:Bind ViewModel.ExpandeEmulatorList,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" MaxHeight="900">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                        <Button Style="{StaticResource ButtonRevealStyle}" HorizontalAlignment="Center"
+                Content="Scanner un dossier pour trouver les émulateurs" Click="Button_Click" Grid.Row="0"/>
+                    <ListView x:Name="listEmuItem" Margin="0,5"
+                              Grid.Column="0" HorizontalContentAlignment="Stretch" HorizontalAlignment="Stretch" SelectionMode="Single" Grid.Row="1"
+                                IsTapEnabled="True" ReorderMode="Enabled" CanDragItems="True" CanReorderItems="True" AllowDrop="True" ItemsSource="{x:Bind ViewModel.Source,Mode=OneWay}"
+                                  ScrollViewer.VerticalScrollMode="Enabled" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.IsVerticalRailEnabled="True">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Vertical" Padding="0">
+                                        <TextBlock Style="{StaticResource HeaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{Binding Name}"></TextBlock>
+                                        <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{Binding Website}"></TextBlock>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                    </ListView>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="2">
+                            <Button HorizontalAlignment="Right"
+                                                    Style="{StaticResource AccentButtonStyle}"
+                                                    Content="Suivant" Click="Button_ChooseEmu"></Button>
+                        </StackPanel>
+                    </Grid>
+                </Expander>
+            <Expander HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" Header="Choisir son Profile" MaxHeight="900"
+                          IsExpanded="{x:Bind ViewModel.ExpandeProfileEmulatorList,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <ListView Grid.Row="0" x:Name="listEmuProfileItem" Margin="0,5" Grid.Column="0"
+                                HorizontalContentAlignment="Stretch" HorizontalAlignment="Stretch" SelectionMode="Single"
+                                IsTapEnabled="True" ReorderMode="Enabled" CanDragItems="True" CanReorderItems="True" AllowDrop="True"
+                                ScrollViewer.VerticalScrollMode="Enabled" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.IsVerticalRailEnabled="True"
+                                ItemsSource="{x:Bind ViewModel.SourceProfile,Mode=OneWay}"> 
+                        <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Vertical" Padding="0">
+                                        <TextBlock Style="{StaticResource HeaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{Binding Name}"></TextBlock>
+                                        <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{Binding Platforms}"></TextBlock>
+                                        <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{Binding StartupExecutable}"></TextBlock>
+                                        <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{Binding StartupArguments}"></TextBlock>
+                                        <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{Binding ImageExtensions}"></TextBlock>
+                                        <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{Binding ProfileFiles}"></TextBlock>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="1">
+                            <Button HorizontalAlignment="Left" Style="{StaticResource AccentButtonStyle}"
+                                Command="{x:Bind ViewModel.CancelCommand}" Content="Annuler"></Button>
+                            <Button HorizontalAlignment="Right" Style="{StaticResource AccentButtonStyle}"
+                                Click="Button_ChooseProfile" Content="Suivant"></Button>
+                        </StackPanel>
+                    </Grid>
+                </Expander>
+            <Expander HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" Header="Choisir son Profile"  MaxHeight="900"
+                      IsExpanded="{x:Bind ViewModel.ExpandeProfilePlateformList,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <ListView x:Name="listEmuProfilePlatformItem" Margin="0,5" Grid.Column="0" HorizontalContentAlignment="Stretch"
+                            HorizontalAlignment="Stretch" SelectionMode="Single" IsTapEnabled="True"
+                            ReorderMode="Enabled" CanDragItems="True" CanReorderItems="True" AllowDrop="True"
+                            ScrollViewer.VerticalScrollMode="Enabled" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.IsVerticalRailEnabled="True"
+                            ItemsSource="{x:Bind ViewModel.SourcePlateforme,Mode=OneWay}"> 
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Vertical" Padding="0">
+                                        <TextBlock Style="{StaticResource HeaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{Binding Name}"></TextBlock>
+                                        <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{Binding Codename}"></TextBlock>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="1">
+                            <Button HorizontalAlignment="Left" Style="{StaticResource AccentButtonStyle}"
+                                Command="{x:Bind ViewModel.CancelCommand}" Content="Annuler"></Button>
+                            <Button HorizontalAlignment="Right" Style="{StaticResource AccentButtonStyle}"
+                     Click="Button_ChoosePlateforme" Content="Suivant"></Button>
+                        </StackPanel>
+                    </Grid>
+                </Expander>
+            <Expander HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" Header="Finaliser votre import de rom" MaxHeight="900"
+                           IsExpanded="{x:Bind ViewModel.ExpandeFinalStartScanning,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
+                <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible">
+                    <StackPanel Orientation="Vertical">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox Header="Dossier à scanner" PlaceholderText="Dossier cible" Grid.Column="0"
+                                     Text="{x:Bind ViewModel.ScanningProfile.FolderPath,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
+                            <Button Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Stretch">
+                                <Button.Content>
+                                    <StackPanel Orientation="Horizontal">
+                                        <FontIcon Glyph="&#xE8B7;" FontSize="16" />
+                                        <TextBlock Text="Choisir le dossier" VerticalAlignment="Center" />
+                                    </StackPanel>
+                                </Button.Content>
+                            </Button>
+                        </Grid>
+                        <TextBlock Style="{StaticResource HeaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="Emulateur Sélectionné"></TextBlock>
+                        <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{x:Bind ViewModel.ChoosenEmulator.Name,Mode=OneWay}"></TextBlock>
+                        <TextBlock Style="{StaticResource HeaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="Profile Sélectionné"></TextBlock>
+                        <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{x:Bind ViewModel.ScanningProfile.Profile.Name,Mode=OneWay}"></TextBlock>
+                        <TextBlock Style="{StaticResource HeaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="Plateforme Sélectionné"></TextBlock>
+                        <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="{x:Bind ViewModel.ScanningProfile.Platforms.Name,Mode=OneWay}"></TextBlock>
+                        <TextBlock Margin="5" Style="{StaticResource SubheaderTextBlockStyle}" HorizontalAlignment="Left" HorizontalTextAlignment="Center" Text="Choix des Providers"></TextBlock>
+                        <Grid Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <RadioButtons Header="Source des metadonnées" Grid.Column="0" Grid.Row="0"
+                                      ItemsSource="{x:Bind ViewModel.ScanningProfile.MetadataProviders,Mode=OneWay}"
+                                      SelectedItem="{x:Bind ViewModel.ScanningProfile.MetaProvider,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                            <RadioButtons Header="Source du Logo"  Grid.Column="1" Grid.Row="0"
+                                      ItemsSource="{x:Bind ViewModel.ScanningProfile.LogoProviders,Mode=OneWay}"
+                                      SelectedItem="{x:Bind ViewModel.ScanningProfile.LogoProvider,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                            <RadioButtons Header="Source de la Cover"  Grid.Column="2" Grid.Row="0"
+                                      ItemsSource="{x:Bind ViewModel.ScanningProfile.CoverProviders,Mode=OneWay}"
+                                      SelectedItem="{x:Bind ViewModel.ScanningProfile.CoverProvider,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                            <RadioButtons Header="Source du Fanart"  Grid.Column="0" Grid.Row="1"
+                                      ItemsSource="{x:Bind ViewModel.ScanningProfile.FanartProviders,Mode=OneWay}"
+                                      SelectedItem="{x:Bind ViewModel.ScanningProfile.FanartProvider,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                            <RadioButtons Header="Source de la Video"  Grid.Column="1" Grid.Row="1"
+                                      ItemsSource="{x:Bind ViewModel.ScanningProfile.VideoProviders,Mode=OneWay}"
+                                      SelectedItem="{x:Bind ViewModel.ScanningProfile.VideoProvider,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                        </Grid>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="1">
+                            <Button HorizontalAlignment="Left" Style="{StaticResource AccentButtonStyle}"
+                                Command="{x:Bind ViewModel.CancelCommand}" Content="Annuler"></Button>
+                            <Button HorizontalAlignment="Right" Style="{StaticResource AccentButtonStyle}"
+                                    Command="{x:Bind ViewModel.StartScanCommand}" Content="Suivant"></Button>
+                        </StackPanel>
+                    </StackPanel>
+                </ScrollViewer>
+                </Expander>
+            </StackPanel>
+        <!--</ScrollViewer>-->
     </Grid>
 </Page>
